BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/CRM_Estero__c.object-meta.xml
<CustomObject>
    <label>Estero</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Estero</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Estero</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>