BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/Acc_Affidam_SOWExp_InizAnn__c.field-meta.xml
<CustomField>
    <fullName>Acc_Affidam_SOWExp_InizAnn__c</fullName>
    <label>Accordato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>