BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/CRM_Acc_SOWImp_InizAnn__c.field-meta.xml
<CustomField>
    <fullName>CRM_Acc_SOWImp_InizAnn__c</fullName>
    <formula>(Acc_Affidam_SOWImp_InizAnn__c)/100</formula>
    <label>Acc_SOWImp_InizAnn</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>