BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/CRM_AssicurazioneCreditiEstero__c.field-meta.xml
<CustomField>
    <fullName>CRM_AssicurazioneCreditiEstero__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assicurazione Crediti Estero</label>
    <length>255</length>
    <type>Text</type>
</CustomField>