BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/CRM_CredFirmaImpUtilFineAP__c.field-meta.xml
<CustomField>
    <fullName>CRM_CredFirmaImpUtilFineAP__c</fullName>
    <label>Crediti firma Util Fine AP</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>