BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/CRM_CredFirmaImpUtilFineMP__c.field-meta.xml
<CustomField>
    <fullName>CRM_CredFirmaImpUtilFineMP__c</fullName>
    <label>Crediti Firma Util Fine MP</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>