BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/CRM_CredFirmaVarAccFineAP__c.field-meta.xml
<CustomField>
    <fullName>CRM_CredFirmaVarAccFineAP__c</fullName>
    <label>Crediti firma Var Acc Fine AP</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>