BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/CRM_CreditiDocVarExportVSspAP__c.field-meta.xml
<CustomField>
    <fullName>CRM_CreditiDocVarExportVSspAP__c</fullName>
    <formula>(Imp_FlussiComm_LCexp_InizAnn__c - Imp_FlussiComm_LCexp_StesPerAnPrec__c)</formula>
    <label>Crediti Doc - Variaz Export VS spAP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>