BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/CRM_CreditiDocVarImportVSspAP__c.field-meta.xml
<CustomField>
    <fullName>CRM_CreditiDocVarImportVSspAP__c</fullName>
    <formula>(Imp_FlussiComm_LCImp_InizAnn__c - Imp_FlussiComm_LCImp_StesPerAnPrec__c)</formula>
    <label>Crediti Doc - Variaz Import VS spAP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>