BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/CRM_DataTabelleMargServEstero__c.field-meta.xml
<CustomField>
    <fullName>CRM_DataTabelleMargServEstero__c</fullName>
    <formula>&quot;dati al: &quot; &amp;
IF(
AND( DAY(CRM_DatiAlMargServEstero__c) &lt;= 9,
MONTH(CRM_DatiAlMargServEstero__c) &lt;= 9
),
&quot;0&quot; &amp; TEXT( DAY(CRM_DatiAlMargServEstero__c))
&amp; &quot;/&quot; &amp; &quot;0&quot; &amp; TEXT(MONTH(CRM_DatiAlMargServEstero__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_DatiAlMargServEstero__c)),
IF(
DAY(CRM_DatiAlMargServEstero__c) &lt;= 9,
&quot;0&quot; &amp; TEXT( DAY(CRM_DatiAlMargServEstero__c))
&amp; &quot;/&quot; &amp; TEXT(MONTH(CRM_DatiAlMargServEstero__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_DatiAlMargServEstero__c)),
IF(
MONTH(CRM_DatiAlMargServEstero__c) &lt;= 9,
TEXT( DAY(CRM_DatiAlMargServEstero__c))
&amp; &quot;/&quot; &amp; &quot;0&quot; &amp; TEXT(MONTH(CRM_DatiAlMargServEstero__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_DatiAlMargServEstero__c)),
TEXT( DAY(CRM_DatiAlMargServEstero__c))
&amp; &quot;/&quot; &amp; TEXT(MONTH(CRM_DatiAlMargServEstero__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_DatiAlMargServEstero__c))
)))</formula>
    <label>Data Tabelle Margine da Servizio Estero</label>
    <type>Text</type>
</CustomField>