BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/CRM_DatiAl__c.field-meta.xml
<CustomField>
    <fullName>CRM_DatiAl__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dati al</label>
    <type>Date</type>
</CustomField>