BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/CRM_DatiAlFlussiCommEstero__c.field-meta.xml
<CustomField>
    <fullName>CRM_DatiAlFlussiCommEstero__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dati Al Flussi Commerciali Estero</label>
    <type>Date</type>
</CustomField>