BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/CRM_DatiAlMargServEstero__c.field-meta.xml
<CustomField>
    <fullName>CRM_DatiAlMargServEstero__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dati Al Margine da Servizio Estero</label>
    <type>Date</type>
</CustomField>