BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/CRM_ExpBPERImpAccFineMP__c.field-meta.xml
<CustomField>
    <fullName>CRM_ExpBPERImpAccFineMP__c</fullName>
    <label>Export BPER Accord Fine MP</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>