BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/CRM_ExpBPERVarAccFineMP__c.field-meta.xml
<CustomField>
    <fullName>CRM_ExpBPERVarAccFineMP__c</fullName>
    <label>Export BPER Var Accord Fine MP</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>