BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/CRM_ExpSistVarAccFineAP__c.field-meta.xml
<CustomField>
    <fullName>CRM_ExpSistVarAccFineAP__c</fullName>
    <label>Export Sist Var Acc Fine AP</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>