BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/CRM_ExpSOWAccFineAP__c.field-meta.xml
<CustomField>
    <fullName>CRM_ExpSOWAccFineAP__c</fullName>
    <formula>CRM_ExpSOWImpAccFineAP__c/100</formula>
    <label>CRM_ExpSOWAccFineAP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>