BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/CRM_ExpSOWAccFineMP__c.field-meta.xml
<CustomField>
    <fullName>CRM_ExpSOWAccFineMP__c</fullName>
    <formula>CRM_ExpSOWImpAccFineMP__c/100</formula>
    <label>CRM_ExpSOWAccFineMP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>