BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/CRM_ExpSOWImpUtilFineAP__c.field-meta.xml
<CustomField>
    <fullName>CRM_ExpSOWImpUtilFineAP__c</fullName>
    <label>Export SOW Util Fine AP</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>