BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/CRM_ExpSOWImpUtilFineMP__c.field-meta.xml
<CustomField>
    <fullName>CRM_ExpSOWImpUtilFineMP__c</fullName>
    <label>Export SOW Util Fine MP</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>