BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/CRM_ExpSOWUtilFineAP__c.field-meta.xml
<CustomField>
    <fullName>CRM_ExpSOWUtilFineAP__c</fullName>
    <formula>CRM_ExpSOWImpUtilFineAP__c/100</formula>
    <label>CRM_ExpSOWUtilFineAP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>