BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/CRM_ExpSOWUtilFineMP__c.field-meta.xml
<CustomField>
    <fullName>CRM_ExpSOWUtilFineMP__c</fullName>
    <formula>CRM_ExpSOWImpUtilFineMP__c/100</formula>
    <label>CRM_ExpSOWUtilFineMP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>