BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/CRM_ExpSOWVarAccFineMP__c.field-meta.xml
<CustomField>
    <fullName>CRM_ExpSOWVarAccFineMP__c</fullName>
    <label>Export SOW Var Accord Fine MP</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>