BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/CRM_ExpSOWVarUtilFineAP__c.field-meta.xml
<CustomField>
    <fullName>CRM_ExpSOWVarUtilFineAP__c</fullName>
    <label>Export SOW Var Util Fine AP</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>