BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/CRM_FormRepExportCredDoc__c.field-meta.xml
<CustomField>
    <fullName>CRM_FormRepExportCredDoc__c</fullName>
    <formula>Imp_FlussiComm_LCexp_InizAnn__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Export Crediti Documentari</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>