BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/CRM_FormRepMargServ__c.field-meta.xml
<CustomField>
    <fullName>CRM_FormRepMargServ__c</fullName>
    <formula>Imp_MargineServizio_Estero_InizAnno__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margine da Servizi</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>