BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/CRM_FormRepNegExpExtraSEPA__c.field-meta.xml
<CustomField>
    <fullName>CRM_FormRepNegExpExtraSEPA__c</fullName>
    <formula>Imp_FlusCom_EXPNonSEPA_InizAnn__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Negoziato Export extra SEPA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>