BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/CRM_FormRepNegImpextraSEPA__c.field-meta.xml
<CustomField>
    <fullName>CRM_FormRepNegImpextraSEPA__c</fullName>
    <formula>Num_FlusCom_ImpNonSEPA_InizAnn__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Negoz Import extra SEPA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>