BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/CRM_FormRepVarExportCredDoc__c.field-meta.xml
<CustomField>
    <fullName>CRM_FormRepVarExportCredDoc__c</fullName>
    <formula>Imp_FlussiComm_LCexp_Var_InizStess__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Var Export Crediti Doc</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>