BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/CRM_FormRepVarImportCredDoc__c.field-meta.xml
<CustomField>
    <fullName>CRM_FormRepVarImportCredDoc__c</fullName>
    <formula>Imp_FlussiComm_LCImp_Var_InizStess__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Var Import Crediti Docum</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>