BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/CRM_FormRepVarMargServspAP__c.field-meta.xml
<CustomField>
    <fullName>CRM_FormRepVarMargServspAP__c</fullName>
    <formula>Imp_MargineServizio_Estero_Var_InizStess__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Var Marg da Serv spAP</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>