BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/CRM_FormRepVarNegExtSEPAVSspAP__c.field-meta.xml
<CustomField>
    <fullName>CRM_FormRepVarNegExtSEPAVSspAP__c</fullName>
    <formula>Imp_FlusCom_EXPNonSEPA_Var_InizStess__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Var Negoz Extra SEPA VS spAP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>