BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/CRM_FormRepVarNegImportExtraSEPAspAP__c.field-meta.xml
<CustomField>
    <fullName>CRM_FormRepVarNegImportExtraSEPAspAP__c</fullName>
    <formula>Imp_FlusCom_ImpNonSEPA_StesPerAnPrec__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Var Negoz Import extra SEPA  spAP</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>