BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/CRM_ImpSistVarUtilFineMP__c.field-meta.xml
<CustomField>
    <fullName>CRM_ImpSistVarUtilFineMP__c</fullName>
    <label>Import Sist Var Util Fine MP</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>