BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/CRM_ImpSOWImpAccFineMP__c.field-meta.xml
<CustomField>
    <fullName>CRM_ImpSOWImpAccFineMP__c</fullName>
    <label>Import SOW Accord Fine MP</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>