BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/CRM_ImpSOWImpUtilFineMP__c.field-meta.xml
<CustomField>
    <fullName>CRM_ImpSOWImpUtilFineMP__c</fullName>
    <label>Import SOW Util Fine MP</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>