BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/CRM_MercatoEsportazione3__c.field-meta.xml
<CustomField>
    <fullName>CRM_MercatoEsportazione3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mercato Esportazione 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>