BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/CRM_MercatoImportazione1__c.field-meta.xml
<CustomField>
    <fullName>CRM_MercatoImportazione1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mercato Importazione 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>