BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/CRM_ModalitaIncasso2__c.field-meta.xml
<CustomField>
    <fullName>CRM_ModalitaIncasso2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Modalità incasso 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>