BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/CRM_NDGEstero__c.field-meta.xml
<CustomField>
    <fullName>CRM_NDGEstero__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NDG Estero</label>
    <length>255</length>
    <type>Text</type>
</CustomField>