BPER/DEVF/force-app/main/default/objects/CRM_Estero__c/fields/CRM_SOWImpAccFineAP__c.field-meta.xml
<CustomField>
    <fullName>CRM_SOWImpAccFineAP__c</fullName>
    <formula>CRM_ImpSOWImpAccFineAP__c/100</formula>
    <label>CRM_SOWImpAccFineAP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>